# pythonProject10

./: category.json  groups.json  product.json  pyproject.toml  textures.json
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_blog_description_alter_blog_views.py  0003_alter_blog_created_at.py  0004_alter_blog_created_at.py  0005_alter_blog_created_at_alter_blog_slug.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: csu.py  fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py  0002_product_manufactured_at.py  0002_product_views_counter_alter_product_category_and_more.py  0003_alter_version_product.py  0004_product_owner.py
catalog/templates/: base.html  products_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
