[tool.poetry]
name = "pythonproject10"
version = "0.1.0"
description = ""
authors = ["Alex19901509 <147518422+Alex19901509@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
pillow = "^10.4.0"
ipython = "^8.26.0"
pytils = "^0.4.1"
psycopg2-binary = "^2.9.9"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
